--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 train.csv filter=lfs diff=lfs merge=lfs -text
+models/v2/knn.skops filter=lfs diff=lfs merge=lfs -text
+models/v2/svc.joblib filter=lfs diff=lfs merge=lfs -text
